index.css
html {
  display: flex;
  height: 100%;
}

body {
  display: flex;
  flex: 1;
  flex-direction: column;
  font: normal 10pt sans-serif;
  margin: 1em;
}

h1 {
  margin: 0 0 1ex;
  text-align: center;
}

#testDiv {
  position: absolute;
  visibility: hidden;
}

#panelsDiv {
  display: flex;
  flex: 1;
  gap: 1em;
  overflow: hidden;
}

#panelsDiv > div {
  flex: 1;
}

#codeDiv {
  display: flex;
  flex-direction: column;
}

textarea {
  flex: 1;
}

polyline {
  fill: none;
  stroke: gray;
}

foreignObject {
  overflow: visible;
}

foreignObject > button {
  background: whitesmoke;
  border: 1px solid gray;
  border-radius: 50%;
  cursor: pointer;
  height: 15px;
  padding: 0;
  width: 15px;
}

foreignObject > button.nodeButton {
  left: calc(50% - 15px / 2);
  position: absolute;
  top: -12px;
}

div.nodeDiv {
  border: 1px solid gray;
  padding: .5ex .5ex 0;
  white-space: pre;
}

#jsonDiv {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

#dataDiv {
  font: normal 10pt monospace;
  overflow: auto;
  white-space: pre;
}

